tests/js/valid/record/parses/trailing-comma-0.buri
a = { foo: 1, bar: [], }