tests/js/invalid/list/mixed-types-2.buri
-- types are mixed
mixed = [{ item: 1 }, { item: "2" }]